# SolarSystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SolarDB.db  SolarSystem.pro  dbconnector.cpp  dbconnector.h  main.cpp  object.cpp  object.h  res.qrc  solar3dalphaobject.cpp  solar3dalphaobject.h  solar3dobject.cpp  solar3dobject.h  solar3dviewport.cpp  solar3dviewport.h  solarsystemcore.cpp  solarsystemcore.h  solarsystemdbconnector.cpp  solarsystemdbconnector.h  solarsystemobject.cpp  solarsystemobject.h  viewportwidget.cpp  viewportwidget.h
Additional/: solarinfoloader.cpp  solarinfoloader.h
Core/: animator.cpp  animator.h  cameracontroller.cpp  cameracontroller.h  mathcore.cpp  mathcore.h  object3dbuilder.h  object3dcontainer.cpp  object3dcontainer.h  solaranimator.cpp  solaranimator.h  solarobjectscontainer.cpp  solarobjectscontainer.h  solarobjectsfactory.h  utils.cpp  utils.h
Core/Render/: solardiffuseeffect.cpp  solardiffuseeffect.h  solarforwardframegraph.h  solarframegraph.h  solarlight.h  solarobjecteffect.h  solarshadoweffect.h  solarstandardframegraph.cpp
Core/SolarObjects/: abstractsolarobject.h  solarobjects.h
Interface/: iframegraph.h  isolarsystemobject.cpp  isolarsystemobject.h  ivisualsolarobject.cpp  ivisualsolarobject.h
Parser/: solarparser.cpp  solarparser.h
QML/: Controls.qml  DatabaseLabel.qml  DateText.qml  FpsLabel.qml  Info.qml  PlanetButton.qml  PlanetList.qml  SolarEntityMain.qml  SolarFrame.qml  SolarSystemMain.qml  SpeedSlider.qml  TransparentButton.qml  UserOptions.qml
Resources/: Info.txt
Resources/Database/: SolarDB.db
Resources/Shaders/: diffuse.frag  diffuse.vert  diffusenormal.frag  diffusenormal.vert  diffuseshadow.frag  diffuseshadow.vert  shadowmap.frag  shadowmap.vert  skybox.vert
Scene/: basevisualsolarobject.cpp  basevisualsolarobject.h  fpscounter.cpp  fpscounter.h  object3d.cpp  object3d.h  solarentity.cpp  solarentity.h  solarobject3d.cpp  solarobject3d.h  visualsolarobject.cpp  visualsolarobject.h
Scene/MaterialObjects/: diffuseobject.cpp  diffuseobject.h  normaldiffusealphaobject.cpp  normaldiffusealphaobject.h  normaldiffuseobject.cpp  normaldiffuseobject.h  unlitobject.cpp  unlitobject.h
Scene/SceneObjects/: earthcloud.cpp  earthcloud.h  emptysolarobject.cpp  emptysolarobject.h  planet.cpp  planet.h  planetring.cpp  planetring.h  planetringalpha.cpp  planetringalpha.h  solarskybox.cpp  solarskybox.h  sun.cpp  sun.h
SolarCore/: cameracontroller.cpp  cameracontroller.h  isolarmathcore.cpp  isolarmathcore.h  mathcore.cpp  mathcore.h  object3dcontainer.cpp  object3dcontainer.h  objectbuilder.h  planetscontainer.cpp  planetscontainer.h  solaranimator.cpp  solaranimator.h  solarmathcore.cpp  solarmathcore.h  solarobjectscontainer.cpp  solarobjectscontainer.h  solarobjectsfactory.h  utils.h
SolarCore/SolarObjects/: abstractsolarobject.cpp  abstractsolarobject.h  solarobjects.cpp  solarobjects.h
SolarCore/SolarRender/: solardiffuseeffect.cpp  solardiffuseeffect.h  solarforwardframegraph.cpp  solarforwardframegraph.h  solarframegraph.cpp  solarframegraph.h  solarlight.cpp  solarlight.h  solarmaterial.cpp  solarmaterial.h  solarobjecteffect.cpp  solarobjecteffect.h  solarshadoweffect.cpp  solarshadoweffect.h  solarstandardframegraph.cpp  solarstandardframegraph.h
UI/: quickui.cpp  quickui.h  solarcontrollerui.cpp  solarcontrollerui.h  solargui.cpp  solargui.h  solarquickui.cpp  solarquickui.h
android/: AndroidManifest.xml
